qstring-uneeded-heap-allocations: Add msvc-compat option

If set then QStringLiteral won't be used when inside initializer lists
Such as static QStringList list = {"foo"}, because it crashes the compiler

BUG: 353807